src/styles/global.css
@font-face {
  font-family: 'Mechanismo';
  src: url(MechanismoRegular-p7ywa.otf);
}

@font-face {
  font-family: 'Fixedsys';
  src: url(FSEX300.ttf);
}

/*Global CSS */
body{
  min-height: 100vh;
  margin: 0;
  background-color: #1e2124;
}

/* Navbar.astro*/

.nav a{
  display: block;
  font-family: 'Mechanismo';
  padding: 14px 16px;
  text-decoration: none;
  font-size: 32px;
  color: #fff;
}

.nav a:hover{
  color:#e2e2e2;
}

/* Rest of Navbar + Footer.astro */

.nav ul, footer{
  list-style-type: none;
  margin: 0;
  padding: 0;
  overflow: hidden;
  background-color: #2F3438;
}

main{
  min-height: 100vh;
  margin-bottom: -30px;
}

footer, .push{
  height: 30px;
  padding: 14px 16px;
}

/* Social.astro; Apart of Footer */
.social{
  padding: 2px 2px;
  color: white;
  background-color: #4c1d95;
  text-decoration: none;
}

.social:hover{

}

